# rs-plugkit

./: .codeinsight.digest  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  content-manifest.json  index.html
.github/workflows/: build.yml  cascade-smoke.yml  diag-gm-test.yml  gh-pages.yml  gm-runner.yml  release.yml  wasm.yml
.gm/memories/: .flat-export-done  mem-03ebf9685c2ea9cc-246.md  mem-0ba4c843e174e8e6-281.md  mem-1587385e2c20d187-294.md  mem-2073a6738becf552-476.md  mem-22a73b9246034314-187.md  mem-28d3254e0ce5641e-520.md  mem-2d2ae202299571a3-762.md  mem-31e3c9813c5cba73-489.md  mem-37d4e4a988de8363-477.md  mem-3bb0f8f02cdad75c-222.md  mem-3e8094f2012f3ee4-1104.md  mem-43fc15aac804c570-397.md  mem-4a6afcceb3b90be2-980.md  mem-4d46cbced0720dd2-305.md  mem-5b66cc413d120d5b-361.md  mem-6625e0bb06469cb6-424.md  mem-67ac6e386c133481-614.md  mem-7a254d301f0c618e-908.md  mem-7cd635d0fc1980c2-573.md  mem-7d828fa624d7425d-710.md  mem-7f62e6b479f1fae7-1873.md  mem-7fa64fdece8b86a1-731.md  mem-837a16573c34b1a9-335.md  mem-8d695c0ad106fb8d-617.md  mem-8dbce90caeb8e4e6-159.md  mem-90043ebecfd14908-467.md  mem-907fad32680afff1-486.md  mem-995253a9167fd06b-518.md  mem-ae87eb2be259255b-508.md  mem-b54afd817c39b751-316.md  mem-cf920f520a5517bc-225.md  mem-d3a727476e1d9da9-186.md  mem-d9cfc3986baf1b1a-532.md  mem-e21897ef09fd9f92-1913.md  mem-e3c8c4d5aac262a5-610.md  mem-edaf28288760deef-386.md  mem-ff75033bf3bbdd39-822.md
crates/gm-runner/: Cargo.toml
crates/gm-runner/src/: browser.rs  cdp_eval.js  daemon.rs  download.rs  embed.rs  exec_js.rs  lock.rs  main.rs  spool.rs  supervisor.rs  task.rs  wasm_host.rs
crates/plugkit-core/: Cargo.toml
crates/plugkit-core/src/: browser_witness.rs  code_index.rs  embed.rs  filter.rs  gates.rs  git_commit_vectors.rs  gitignore.rs  lib.rs  libsql_wasm.rs  mediator.rs  memory_md.rs  pipeline.rs  pkfs.rs  poll_detect.rs  prose.rs  rssearch_vectors.rs  shared_db.rs  vecns.rs  vecstore.rs  wasm_dispatch.rs
crates/plugkit-core/src/orchestrator/: cas.rs  claim_audit.rs  fsm.rs  fsm_vendor.rs  memorize.rs  mod.rs  mutables.rs  prd.rs  recall.rs  residual.rs  state.rs  submodule_drift.rs  transitions.rs  yaml_util.rs
crates/plugkit-core/src/orchestrator/instructions/: browser.rs  consolidate.rs  emit.rs  entry.rs  execute.rs  mod.rs  plan.rs  update_docs.rs  verify.rs
crates/plugkit-core/src/orchestrator/instructions/prose/: entry.md  execute.md  plan.md  verify.md
crates/plugkit-core/src/wasm_dispatch/: events.rs  host_abi.rs  mod.rs  verbs.rs
crates/rs-search/: Cargo.toml
crates/rs-search/src/: fusion.rs  lib.rs  tokenize.rs
docs/: wasm-parity.md
scripts/: build-local.ps1  fetch-weights.ps1  fetch-weights.sh
site/: package.json  theme.mjs
site/content/globals/: site.yaml
site/content/pages/: home.yaml
src/: browser_witness.rs  code_index.rs  embed.rs  filter.rs  gates.rs  git_commit_vectors.rs  gitignore.rs  learning.rs  lib.rs  libsql_wasm.rs  main.rs  memory_md.rs  pipeline.rs  pkfs.rs  poll_detect.rs  prose.rs  rslearn_vectors.rs  rssearch_vectors.rs  search.rs  self_update.rs  shared_db.rs  spool.rs  validation.rs  vecstore.rs  wasm_dispatch.rs
src/hook/: agent_browser.rs  bootstrap.rs  mod.rs  post_compact.rs  post_tool_use.rs  pre_compact.rs  pre_tool_use.rs  prompt_submit.rs  rs_learn.rs  session_end.rs  session_start.rs  stop.rs
src/orchestrator/: cas.rs  discipline_note.rs  memorize.rs  mod.rs  mutables.rs  prd.rs  recall.rs  residual.rs  state.rs  task.rs  transitions.rs
src/orchestrator/instructions/: browser.rs  consolidate.rs  emit.rs  entry.rs  execute.rs  mod.rs  plan.rs  update_docs.rs  verify.rs
tests/: orchestrator_mutables.rs
