[package]
name = "rs-plugkit"
version = "0.1.383"
edition = "2021"

[lib]
name = "rs_plugkit"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
wasm = []

[dependencies]
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
