[package]
name = "rs-plugkit"
version = "0.1.398"
edition = "2021"

[lib]
name = "rs_plugkit"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
wasm = []

[dependencies]
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
libsql-ffi = { version = "0.9", default-features = false, features = ["wasm32-wasi-vfs"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
