[package]
name = "rs-plugkit"
version = "0.1.690"
edition = "2021"

[lib]
name = "rs_plugkit"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
wasm = []

[dependencies]
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
libsql-ffi = { version = "=0.9.0", default-features = false, features = ["wasm32-wasi-vfs"] }
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-json = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-md = "0.5"
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"] }
getrandom = { version = "0.2", features = ["custom"] }
rs-learn = { git = "https://github.com/AnEntrypoint/rs-learn.git", package = "rs-learn", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
