[package]
name = "gm-runner"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "gm-runner"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "46", features = ["cache"] }
wasmtime-wasi = "46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["tls"] }
directories = "5"
anyhow = "1"
wait-timeout = "0.2"
candle-core = { version = "0.8", default-features = false }
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
